compiler/actonc/test/typeerrors/ex8.act
actor main(env):
    n : int = 7
    for x in n:
        pass
    
